# ZBackup

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  backup.conf  config.hpp  data_manage.hpp  hot.hpp  logger.hpp  test  util.hpp
ThreadPool/: threadpool.hpp
backup/: main.cc
backup/include/compress/: snappy_compress.h
backup/include/core/: authentication_service.h  config_service.h  dependency_injector.h  handler_factory.h  route_registry.h  service_container.h  session_service.h  threadpool.h
backup/include/data/: data_manager.h
backup/include/handlers/: base_handler.h  delete_handler.h  download_handler.h  listshow_handler.h  login_handler.h  logout_handler.h  register_handler.h  static_handler.h  upload_handler.h
backup/include/info/: backup_info.h  user_info.h
backup/include/interfaces/: auth_manager_interface.h  backup_storage_interface.h  base_info_interface.h  compress_interface.h  config_manager_interface.h  data_manager_interface.h  handler_factory_interface.h  route_registry_interface.h  server_lifecycle_interface.h  session_manager_interface.h  storage_interface.h  user_manager_interface.h  user_storage_interface.h
backup/include/middleware/: auth_middleware.h
client/: Makefile  client.cc  client.hpp  util.hpp
config/: config.json  data.json
resource/: home.html  index.html  login.html  register.html
server/: Makefile  backup.conf  config.hpp  data_manage.hpp  logger.hpp  looper.hpp  rw_mutex.hpp  server.cc  server.hpp  storage.hpp  threadpool.hpp  util.hpp
server/client/: data_manage.hpp  httplib.h  util.hpp
server/handler/: download_handler.hpp  listshow_handler.hpp
server/handlers/: base_handler.hpp  delete_handler.hpp  download_handler.hpp  listshow_handler.hpp  static_handler.hpp  upload_handler.hpp
server/server/: config.json  logger.hpp  server.hpp  storage.hpp  util.hpp
server/test/: test.cc
test/: Makefile  test  test.cc
zbackup/: config.hpp  data_manage.hpp  hot.hpp  logger.hpp  server.hpp
zlog/client/: client.hpp  logger.hpp
zlog/server/: compress.hpp  config.hpp  data_manage.hpp  looper.hpp  server.cc
zlog/test/: test.cc
(+116 files in other folders)
